fixes problem with baby image on mobile

--- a/main_app/static/styles/responsive.css
+++ b/main_app/static/styles/responsive.css
@@ -256,7 +256,7 @@
         max-width: 100%;
         width: 100%;
         display: block;
-        margin-bottom: 18px;
+        margin: 0 0 18px;
     }
 
     .about-content  {
